Fixed assignee dropdown styling
- Assignee dropdown styling now doesn’t look like shit thanks to
display: static
- Fixed hit area of drawer toggle button.
- Made drawer toggle button more visible
- Consolidated all other sass properties to base.scss file… having
partials seems a bit overboard with this project
- Refactored some more classes

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,7 +1,11 @@
 @import 'bourbon';
 @import 'neat';
-@import 'fonts';
+@import url(http://fonts.googleapis.com/css?family=Arimo:400,700&subset=latin,latin-ext);
 @import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css';
+
+/*------------------------------------*\
+    #BASE STYLES
+\*------------------------------------*/
 
 // http://www.paletton.com/#uid=30s0u0kQytz00yfuMPRRRgD++00
 $primary-color: #EC6600;
@@ -103,9 +107,13 @@ html, body {
     }
 
     .btn--toggle {
-        right: .8em;
+        right: .5em;
         font-size: 1em;
-        padding: 0;
+        top: 1.5em;
+        background: transparent;
+        .fa {
+
+        }
     }
 
     .hide--drawer-in {
@@ -187,14 +195,14 @@ html, body {
     text-shadow: rgba(255,255,255, .6) 0 1px 0;
 }
 
-    .subheader__link {
-        color: #444;
-        text-decoration: none;
-        &:hover {
-            color: #111;
-            border-bottom: 1px dotted #aaa;
-        }
+.subheader__link {
+    color: #444;
+    text-decoration: none;
+    &:hover {
+        color: #111;
+        border-bottom: 1px dotted #aaa;
     }
+}
 
 .img--avatar {
         width: 100%;
@@ -210,39 +218,15 @@ html, body {
     vertical-align: middle;
 }
 
-.assign-button {
-    background: #fff;
-    text-align: left;
-    color: #ccc;
-    width: 100%;
-    border: 0;
-    border-top: 1px dotted #ddd;
-    font-family: 'Arimo', sans-serif;
-    padding: .35em 1em .35em 1.25em;
-    &:hover, &:focus {
-        color: #999;
-        cursor: pointer;
-        outline: none;
-    }
-}
-
-.expanded {
-    .assign-button {
-        background: #888;
-        padding-bottom: .55em;
-        color: #fff;
-        border-top: 1px solid #888;
-        font-weight: 700;
-        -webkit-font-smoothing: antialiased;
-    }
-}
-
 .ui-sortable-helper {
     box-shadow: rgba(0,0,0,.3) 0 .5em 1em;
 }
 
 
-//Forms
+/*------------------------------------*\
+    #FORMS
+\*------------------------------------*/
+
 .form-list {
     padding-left: 0;
     font-size: .9em;
@@ -252,14 +236,17 @@ html, body {
     font-size: 1.25em;
     margin-bottom: 1.15em;
     list-style-type: none;
+
     label {
         display: block;
         margin-bottom: .1em;
         text-shadow: rgba(255,255,255, .6) 0 1px 0;
+
         a, a:hover {
             color: #111;
         }
     }
+
     &:last-of-type {
         margin-bottom: 0;
     }
@@ -358,7 +345,105 @@ html, body {
 }
 
 
-//Buttons
+/*------------------------------------*\
+    #POPOVERS
+\*------------------------------------*/
+
+.popover-wrap {
+    position: relative;
+    display: block;
+}
+
+.popover {
+    position: static;
+    width: 100%;
+    z-index: 5;
+    background: #999;
+    margin-top: -1px;
+    border-radius: 0 .2em .2em .2em;
+    padding: 0;
+}
+
+.popover-list {
+    padding-left: 0;
+    list-style: none;
+    font-size: .9em;
+}
+
+.popover-list__item {
+    font-size: .9em;
+    margin: 0;
+
+    &:last-of-type {
+        .assign-user-button {
+            border-bottom: 0;
+        }
+    }
+}
+
+.expanded {
+    .btn--popover {
+        background: #888;
+        padding-bottom: .55em;
+        color: #fff;
+        border-top: 1px solid #888;
+        font-weight: 700;
+        -webkit-font-smoothing: antialiased;
+
+        &:hover, &:focus {
+            color: #fff;
+        }
+    }
+}
+
+/*------------------------------------*\
+    #MODALS
+\*------------------------------------*/
+
+.modal-bg {
+    position: fixed;
+    z-index: 98;
+    opacity: 0;
+    visibility: hidden;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: left;
+    background: rgba(0,0,0,.8);
+    display: none;
+    &.in {
+        display: block;
+        visibility: visible;
+        opacity: 1;
+    }
+}
+
+.modal {
+    position: absolute;
+    z-index: 99;
+    width: 30em;
+    padding: 2em;
+    border-radius: .35em;
+    border: 5px solid #fff;
+    background: #ddd;
+    box-shadow: rgba(0,0,0,.8) 0 0 .5em;
+    top: 5%;
+    left: 35%;
+    h2 {
+        margin-top: 0;
+        margin-bottom: 1em;
+        text-align: center;
+        text-shadow: rgba(255,255,255, .6) 0 1px 0;
+    }
+}
+
+
+
+/*------------------------------------*\
+    #BUTTONS
+\*------------------------------------*/
+
 .btn {
     border-radius: .25em;
     @include transition(all .5s ease-out 0);
@@ -454,21 +539,21 @@ html, body {
     position: absolute;
     top: 1.85em;
     right: -1.75em;
-    padding: .5em;
+    padding: 0;
     border-radius: 0 .25em .25em 0;
-    background: #ddd;
+    background: #ccc;
 
     .fa {
-        opacity: .3;
+        opacity: .4;
+        padding: .5em;
     }
 
     &:hover {
         opacity: 1;
             .fa {
-            opacity: .6;
+            opacity: .7;
         }
     }
-
 }
 
 .btn--close {
@@ -477,27 +562,55 @@ html, body {
     right: .5em;
 }
 
-.secondary-button, .secondary-button:hover {
-    background: transparent;
-    text-transform: none;
+.btn--popover {
+    background: #fff;
+    text-align: left;
+    color: #ccc;
+    width: 100%;
     border: 0;
-    box-shadow: none;
-    text-shadow: rgba(255,255,255, .6) 0 1px 0;
-    color: #999;
-    padding: .75em;
+    border-top: 1px dotted #ddd;
+    font-family: 'Arimo', sans-serif;
+    padding: .35em 1em .35em 1.25em;
+
+    &:hover, &:focus {
+        color: #999;
+        cursor: pointer;
+        outline: none;
+    }
 }
 
-.secondary-button:hover {
-    color: #777;
+.btn--assign {
+    -webkit-font-smoothing: antialiased;
+    border: 0;
+    background: transparent;
+    width: 100%;
+    text-align: left;
+    font-family: 'Arimo', sans-serif;
+    font-size: 1.35em;
+    vertical-align: middle;
+    padding: .5em 1em;
+    margin: 0;
+    color: #fff;
+    border-bottom: 1px dotted #bbb;
+
+    &:hover {
+        cursor: pointer;
+        background: rgba(255,255,255,.15);
+    }
+
+    &:focus {
+        outline: none;
+    }
 }
 
+.btn--assign-text {vertical-align: middle;}
 
-//Helpers
+
+/*------------------------------------*\
+    #HELPERS
+\*------------------------------------*/
+
 .make-block {display: block;}
-
-.hide--drawer-out {
-    display: none;
-}
 
 .make-inline-block {display: inline-block;}
 
@@ -510,3 +623,5 @@ html, body {
 .right {float: right;}
 
 .full-width {width: 100%;}
+
+.hide--drawer-out {display: none;}
